Updated v1.8